--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Don't include the python package's copy of the swagger
-python/ga4gh/dos/data_object_service.swagger.yaml
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -23,6 +20,7 @@ lib64/
 parts/
 sdist/
 var/
+wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -45,18 +43,12 @@ htmlcov/
 .cache
 nosetests.xml
 coverage.xml
-*,cover
+*.cover
 .hypothesis/
 
 # Translations
 *.mo
 *.pot
-
-# PyTest
-.pytest_cache
-
-# PyCharm
-.idea/
 
 # Django stuff:
 *.log
@@ -70,12 +62,15 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/build/
+docs/_build/
 
 # PyBuilder
 target/
 
-# IPython Notebook
+# PyCharm
+.idea/
+
+# Jupyter Notebook
 .ipynb_checkpoints
 
 # pyenv
@@ -84,18 +79,33 @@ target/
 # celery beat schedule file
 celerybeat-schedule
 
+# SageMath parsed files
+*.sage.py
+
 # dotenv
 .env
 
 # virtualenv
+.venv
 venv/
 ENV/
 
 # Spyder project settings
 .spyderproject
+.spyproject
 
 # Rope project settings
 .ropeproject
 
-# swagger in the python directory
-python/ga4gh/dos/data_objects_service.swagger.json
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+
+# pytest
+.pytest_cache/
+
+# local config files
+*.config
+*.evals
