--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ python:
 before_install:
 - sudo apt-get update -qq
 - pip install toil[all]
-- pip install . --process-dependency-links
-- pip install -r dev-requirements.txt
+- pip install . --process-dependency-links && pip install -r dev-requirements.txt
 
 script:
   - python setup.py test
